overflow issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -114,8 +114,8 @@ background-size: cover;
     height:500px;
     display: inline-block;
     white-space: nowrap;
-    overflow-x: hidden; 
-                overflow-x: auto; 
+    overflow: hidden; 
+             
     }
 
 
